Fix mobile horizontal overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,12 @@ html, body, #__next {
   height: 100%;
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 
 :root{
   --color-primary: #000000;
